--- a/app/src/main/res/layout/fragment_setup_account.xml
+++ b/app/src/main/res/layout/fragment_setup_account.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:padding="20dp"
+    android:background="#FF5252">
 
 
     <ImageView
@@ -16,16 +19,23 @@
         android:clickable="true"
         android:src="@drawable/ic_profile"
         android:tint="@android:color/darker_gray" />
-    <EditText
-        android:id="@+id/edit_phone_number_setup_frag"
-        android:layout_width="wrap_content"
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Enter your new Phone Number"
-        android:gravity="center"
+        android:theme="@style/TextLabel">
+
+    <android.support.design.widget.TextInputEditText
+        android:layout_marginTop="10dp"
+        android:id="@+id/edit_phone_number_setup_frag"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Edit phone number"
+        android:textColor="@color/colorWhite"
         android:inputType="phone"
-        android:layout_gravity="center"
-        android:textStyle="italic"/>
+        android:gravity="center"
+        />
+</android.support.design.widget.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,14 +54,26 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Save"/>
+            android:text="Save"
+            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorPrimaryDark"/>
 
         <Button
             android:id="@+id/btn_cancel_changes_setup_acc"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Cancel"/>
+            android:text="Cancel"
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            android:layout_marginLeft="5dp"
+            android:background="@color/colorPrimaryDark"/>
 
     </LinearLayout>
 
