--- a/app/src/main/res/layout/fragment_my_offers.xml
+++ b/app/src/main/res/layout/fragment_my_offers.xml
@@ -3,6 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tv_title_of_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_my_offers"
         android:layout_width="match_parent"
