--- a/app/src/main/res/layout/fragment_setup_account.xml
+++ b/app/src/main/res/layout/fragment_setup_account.xml
@@ -13,7 +13,7 @@
         android:id="@+id/img_edit_profile"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
         android:clickable="true"
